--- a/requirements.txt
+++ b/requirements.txt
@@ -1,276 +1,13 @@
-setuptools>=61.0.0
 wheel
 build
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-asttokens==3.0.0
-astunparse==1.6.3
-attrs==24.3.0
-base58==2.1.1
-bcrypt==4.3.0
-beautifulsoup4==4.12.3
-biopython==1.85
-bitarray==3.0.0
-blinker==1.9.0
-blis==1.2.0
-bpy==4.4.0
-cachetools==5.5.1
-catalogue==2.0.10
-certifi==2024.12.14
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-ChatterBot==1.2.3
-chatterbot-corpus==1.2.2
-ckzg==2.0.1
-click==8.1.8
-cloudpathlib==0.21.0
-colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.1
-cryptography==44.0.3
-cycler==0.12.1
-cymem==2.0.11
-Cython==3.0.12
-cytoolz==1.0.1
-dataclasses-json==0.6.7
-debugpy==1.8.12
-decorator==5.1.1
-distlib==0.3.9
-distro==1.9.0
-elevenlabs==2.3.0
-eth-account==0.13.4
-eth-hash==0.7.1
-eth-keyfile==0.8.1
-eth-keys==0.6.1
-eth-rlp==2.1.0
-eth-typing==5.1.0
-eth-utils==5.2.0
-eth_abi==5.2.0
-executing==2.1.0
-fastapi==0.115.12
-ffmpeg-python==0.2.0
-ffmpy==0.6.0
-filelock==3.18.0
-Flask==3.1.0
-Flask-Cors==5.0.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-flatbuffers==24.12.23
-fonttools==4.55.3
-fpdf==1.7.2
-frozendict==2.4.6
-frozenlist==1.5.0
-fsspec==2025.5.1
-future==1.0.0
-gast==0.6.0
-geocoder==1.38.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
-google-api-python-client==2.161.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
-google-pasta==0.2.0
-googleapis-common-protos==1.67.0
-gradio==5.33.1
-gradio_client==1.10.3
-greenlet==3.1.1
-groovy==0.1.2
-groq==0.26.0
-grpcio==1.70.0
-grpcio-status==1.70.0
-gTTS==2.5.4
-gunicorn==23.0.0
-h11==0.16.0
-h5py==3.12.1
-hexbytes==1.3.0
-html5lib==1.1
-httpcore==1.0.9
-httplib2==0.22.0
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.32.4
-idna==3.10
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-imbalanced-learn==0.13.0
-ipfshttpclient==0.7.0
-ipykernel==6.29.5
-ipython==8.31.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==3.8.0
-kiwisolver==1.4.8
-langchain==0.3.25
-langchain-community==0.3.23
-langchain-core==0.3.58
-langchain-text-splitters==0.3.8
-langcodes==3.5.0
-langsmith==0.3.42
-language_data==1.3.0
-libclang==18.1.1
-lxml==5.3.0
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-mathparse==0.1.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.4.1
-multiaddr==0.0.9
-multidict==6.1.0
-multitasking==0.0.11
-murmurhash==1.0.12
-mypy_extensions==1.1.0
-namex==0.0.8
-narwhals==1.24.1
-nest-asyncio==1.6.0
-netaddr==1.3.0
-networkx==3.4.2
-numpy==2.0.2
-openai==0.27.0
-opencv-python==4.11.0.86
-openrouteservice==2.3.3
-opt_einsum==3.4.0
-optree==0.14.0
-orjson==3.10.18
-packaging==23.2
-pandas==2.2.3
-parsimonious==0.10.0
-parso==0.8.4
-pdfminer.six==20250327
-pdfplumber==0.11.6
-peewee==3.17.8
-pillow==11.1.0
-pipenv==2025.0.3
-platformdirs==4.3.6
-playsound==1.3.0
-plotly==6.0.1
-preshed==3.0.9
-prompt_toolkit==3.0.48
-propcache==0.2.1
-proto-plus==1.26.0
-protobuf==5.29.3
-psutil==6.1.1
-pure_eval==0.2.3
-py-solc-x==2.0.3
-pyaes==1.6.1
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-PyAudio==0.2.14
-pycparser==2.22
-pycryptodome==3.21.0
-pydantic==2.10.5
-pydantic-settings==2.9.1
-pydantic_core==2.27.2
-pydeck==0.9.1
-pydub==0.25.1
-pygame==2.6.1
-Pygments==2.19.1
-pyotp==2.9.0
-pyparsing==3.2.1
-pypdfium2==4.30.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.1.0
-python-multipart==0.0.20
-pytz==2024.2
-pyunormalize==16.0.0
-pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.0
-qrcode==8.0
-ratelim==0.1.6
-referencing==0.36.2
-regex==2024.11.6
-reportlab==4.3.1
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-rlp==4.0.1
-rpds-py==0.22.3
-rsa==4.9
-ruff==0.11.13
-safehttpx==0.1.6
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
-semantic-version==2.10.0
-shellingham==1.5.4
-six==1.17.0
-sklearn-compat==0.1.3
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.6
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.14.1
-SQLAlchemy==2.0.39
-srsly==2.5.1
-stack-data==0.6.3
-starlette==0.46.2
-streamlit==1.41.1
-streamlit-js-eval==0.1.7
-streamlit-option-menu==0.4.0
-Telethon==1.39.0
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-termcolor==2.5.0
-thinc==8.3.4
-threadpoolctl==3.5.0
-toml==0.10.2
-tomlkit==0.13.3
-toolz==1.0.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-typer==0.15.2
-types-requests==2.32.0.20241016
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2024.2
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.3
-varint==1.0.2
-virtualenv==20.31.2
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-web3==7.7.0
-webencodings==0.5.1
-websockets==13.1
-Werkzeug==3.1.3
-wrapt==1.17.2
-yarl==1.18.3
-yfinance==0.2.52
-zstandard==0.23.0
+aiohttp
+Flask
+Flask-Cors
+Flask-Login
+Flask-SQLAlchemy
+python-dotenv
+gunicorn
+gradio==4.22.0
+openai
+pydantic
+requests
